Fix for warnings